# Chalkboard-OCR-Classification-Kit

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  gutarik.toml  mkdocs.yml  openapi.yml  pyproject.toml  test.py  отчёт.md
app/: config.py  container.py  jam.py  main.py
app/adapters/engines/: doctr_engine.py  easy_ocr_engine.py  paddle_engine.py  pix2text_engine.py  rapidocr.py  tesseract_engine.py
app/adapters/gateways/: mongo.py  redis.py  s3.py
app/adapters/interfaces/: db.py  ocr_engine.py  s3.py
app/adapters/repositories/: abc_repo.py  image_repo.py  mongo_repo.py  redis_blacklist_repo.py  redis_rate_limit_repo.py  redis_repo.py  user_repo.py
app/api/: __init__.py  health.py  misc.py  user.py
app/api/exceptions/: handlers.py  problem_details_dto.py  problem_factory.py
app/api/routers/: __init__.py  auth.py  health.py  ocr.py  user.py
app/api/schemas/: image_dto.py  problem_details_dto.py  user_dto.py
app/core/domain/models/: image.py  token.py  user.py
app/core/errors/: __init__.py  auth.py  security.py  user.py  validation.py
app/core/middleware/: api_monitoring.py  paseto_refresh.py  rate_limit.py
app/core/models/: user.py
app/core/services/: auth_service.py  ocr_service.py  security_service.py  user.py  user_service.py  validation_service.py
app/core/utils/: utils.py
app/errors/: __init__.py  auth.py  security.py  user.py
app/infrastructure/gateways/: mongo.py
app/infrastructure/interfaces/: db.py
app/infrastructure/repositories/: __abc_repo__.py  mongo_repo.py  user_repo.py
app/monitoring/: api_monitor.py  graphs.py  ocr_correction.py  prometheus.py  prometheus_middleware.py  prometheus_mongo.py  prometheus_redis.py
app/repositories/: __abc_repo__.py  mongo_repo.py
app/schema/: user_dto.py
app/tests/: test_bench.py
app/utils/: generate_docs.py
diagram/: business_logic_diagram.py  tech_architecture_diagram.py
docs/: config.md  container.md  in_work.md  main.md  plugin.md
docs/adapters/engines/: doctr_engine.md  easy_ocr_engine.md  paddle_engine.md  pix2text_engine.md  rapidocr.md  tesseract_engine.md
docs/adapters/gateways/: mongo.md  redis.md  s3.md
docs/adapters/interfaces/: db.md  ocr_engine.md  s3.md
docs/adapters/repositories/: abc_repo.md  image_repo.md  mongo_repo.md  redis_blacklist_repo.md  redis_rate_limit_repo.md  user_repo.md
docs/api/exceptions/: handlers.md  problem_details_dto.md  problem_factory.md
docs/api/routers/: auth.md  health.md  ocr.md  user.md
docs/api/schemas/: image_dto.md  user_dto.md
docs/core/domain/models/: image.md  token.md  user.md
docs/core/errors/: auth.md  security.md  user.md  validation.md
docs/core/middleware/: api_monitoring.md  paseto_refresh.md  rate_limit.md
docs/core/models/: user.md
docs/core/services/: auth_service.md  ocr_service.md  security_service.md  user_service.md  validation_service.md
docs/core/utils/: utils.md
docs/custom_theme/: 404.html
docs/custom_theme/assets/stylesheets/: extra.css
docs/diagrams/: diagrams.md  отчёт.md
docs/errors/: user.md
docs/monitoring/: api_monitor.md  graphs.md  ocr_correction.md  prometheus.md  prometheus_middleware.md  prometheus_mongo.md  prometheus_redis.md
docs/repositories/: abc_repo.md
docs/schema/: user_dto.md
docs/scripts/: clean_project.md
docs/utils/: generate_docs.md
plugins/wiki_publish/: __init__.py  pyproject.toml
plugins/wiki_publish/wiki_publish/: __init__.py  plugin.py
scripts/: clean_project.sh
tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_error_codes.py  test_health_router.py  test_image_dto.py  test_minio_gateway.py  test_mongo_gateway.py  test_ocr.py  test_ocr_router.py  test_problem_handlers.py  test_redis_gateway.py  test_security_service.py  test_uploaded_image_model.py  test_user_domain_model.py  test_user_dto.py  test_user_service.py  test_users_router.py  test_validation_service.py
tests/api/: test_404.py  test_health.py  test_openapi.py
tests/services/: test_auth_service.py  test_security_service.py  test_user_service_module.py  test_validation_service.py
