[tool.poetry]
name = "chalkboard-ocr-classification-kit"
version = "0.1.0"
description = "Chalkboard-OCR-Classification-Kit"
authors = ["ProudRykar <proudrykar@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.9"
punq = "^0.7.0"
pymongo = "^4.15.1"
pytest = "^8.4.2"
starlette = "^0.48.0"
uvicorn = "^0.36.0"
httpx = "^0.28.1"
fastapi = "^0.117.1"
litestar = "^2.17.0"
dotenv = "^0.9.9"
jamlib = "^2.3.0"
email-validator = "^2.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^5.1.0"

[tool.poetry.dev-dependencies]
isort = "^6.0.0"
flake8 = "^7.1.2"
black = "^25.1.0"
pre-commit = "^4.1.0"
icecream = "^2.1.4"
mypy = "^1.15.0"

[tool.mypy]
disable_error_code = ["no-redef", "import-not-found", "import-untyped", "attr-defined"]

[tool.black]
line-length = 80
skip-string-normalization = false

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
balanced_wrapping = true
known_first_party = "src"
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["env", ".env", ".env.example", "migrations/"]

[tool.flake8]
ignore = ["D203", "E501"]
exclude = [".git", "__pycache__", "__init__.py", "docs/"]
max-complexity = 18
max-line-length = 80

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "^9.6.20"
mkdocs-glightbox = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
