[tool.poetry]
name = "chalkboard-ocr-classification-kit"
version = "0.1.0"
description = "Chalkboard-OCR-Classification-Kit"
authors = ["ProudRykar <proudrykar@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
punq = "^0.7.0"
pymongo = "^4.15.1"
pytest = "^8.4.2"
starlette = "^0.48.0"
uvicorn = "^0.36.0"
httpx = "^0.28.1"
litestar = "^2.17.0"
dotenv = "^0.9.9"
jamlib = "^2.3.0"
email-validator = "^2.3.0"
python-magic = "^0.4.27"
strawberry-graphql = {extras = ["debug-server"], version = "^0.282.0"}
ruff = "^0.13.3"
mkdocs-material = "^9.6.21"
mkdocs-glightbox = "^0.5.1"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"
html2text = "^2025.4.15"
bs4 = "^0.0.2"

[tool.jam]
auth_type = "jwt"
alg = "HS256"
secret_key = "SECRET"
expire = 1209600

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^5.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^4.1.0"
icecream = "^2.1.4"
mypy = "^1.15.0"
wiki-publish = { path = "./plugins/wiki_publish", develop = true }

[tool.ruff]
target-version = "py39"
line-length = 80
exclude = ["*__init__.py", "tests/", "*exceptions/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["UP", "D"]
ignore = ["UP009", "D100", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mongofy"]
lines-after-imports = 2
lines-between-types = 1
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
disable_error_code = ["misc", "no-any-return"]
python_version = "3.13"

files = ["mongofy", "tests"]

strict = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "^9.6.20"
mkdocs-glightbox = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "plugins"
