[tool.poetry]
name = "chalkboard-ocr-classification-kit"
version = "0.1.0"
description = "Chalkboard-OCR-Classification-Kit"
authors = ["ProudRykar <proudrykar@mail.ru>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# --- Core dependencies ---
punq = "^0.7.0"
pymongo = "^4.15.1"
dotenv = "^0.9.9"
email-validator = "^2.3.0"
python-magic = "^0.4.27"
pygments = "^2.19.2"

# --- Web & API ---
starlette = "^0.48.0"
uvicorn = "^0.36.0"
litestar = "^2.17.0"

# --- Utility / Additional libs ---
jamlib = "^2.3.0"
giraffe-view = "^0.2.3"
gutarik = "^0.1.0"
toml = "^0.10.2"
boto3 = "^1.40.52"


[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "^9.6.21"
mkdocs-glightbox = "^0.5.1"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
icecream = "^2.1.4"
mypy = "^1.15.0"
pytest-benchmark = "^5.1.0"
pytest = "^8.4.2"
ruff = "^0.13.3"

[tool.jam]
auth_type = "jwt"
alg = "HS256"
secret_key = "SECRET"
expire = 1209600

# ---------------- Ruff ----------------
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["*__init__.py", "tests/", "*exceptions/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["UP", "D", "E", "W", "F", "B", "I", "N", "ANN", "S"]
ignore = ["UP007", "UP038", "ANN401", "S104", "S607", "S603"]
extend-ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mongofy"]
lines-after-imports = 2
lines-between-types = 1
combine-as-imports = true
force-wrap-aliases = true

# ---------------- Mypy ----------------
[tool.mypy]
python_version = "3.13"
files = ["mongofy", "tests"]

strict = true
ignore_missing_imports = true
disable_error_code = ["misc", "no-any-return"]

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# ---------------- Build System ----------------
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
