[tool.poetry]
name = "wiki-publish"
version = "0.2.0"
description = "MkDocs Wiki auto-pushing in GitHub project wiki"
authors = ["ProudRykar proudrykar@mail.ru"]
packages = [{ include = "wiki_publish", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.0"

[tool.poetry.plugins."mkdocs.plugins"]  # Регистрация плагина для MkDocs
"wiki-publish" = "wiki_publish.plugin:WikiPublishPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"